--- a/Resume/Content/site.css
+++ b/Resume/Content/site.css
@@ -117,6 +117,7 @@ a {
     color: #fff;
     padding: 3px;
     border-radius: 3px;
+    text-decoration: none;
 }
 a:hover {
     color: #000;
@@ -147,8 +148,8 @@ a:hover {
     font-weight: bold;
 }
 .text-Highlight {
-    color: #101010;
-    background-color: #cbffec;
+    color: #333;
+    background-color: #fff;
     padding: 0px 4px 2px 4px;
     border-radius: 3px;
 }
