--- a/Resume/Views/Shared/_HeaderDownloads.cshtml
+++ b/Resume/Views/Shared/_HeaderDownloads.cshtml
@@ -46,7 +46,7 @@
                             @foreach (var item in Model)
                             {
                             <tr>
-                                <td style="width: 25vw;">@item.SubmoduleDescription</td>
+                                <td style="width: 25vw;">@item.DownloadDescription</td>
                                 <td style="width: 30vw;">@item.UrlSourceType</td>
                                 <td style="width: 40vw;">
                                     @switch (item.UrlSourceTypeId)
