--- a/Resume/Views/Shared/_HeaderProfile.cshtml
+++ b/Resume/Views/Shared/_HeaderProfile.cshtml
@@ -14,11 +14,11 @@
                 <th>
                     <div class="content">
                         <div class="row no-gutters">
-                            <div class="col col-5">
-                                <h1 id="welcomeString">C:\></h1>
+                            <div class="col col-4">
+                                <h3 id="welcomeString">C:\></h3>
                             </div>
-                            <div class="col col-3">
-                                <div style="font-size: 40px;float: left;">"</div><br />...Looking forward to my next challenging opportunity in the areas of web, software & database engineering<div style="font-size: 40px;float:right;">"</div>
+                            <div class="col col-34">
+                                <div style="float: left; font-size: 40px; color: #00ffb4;">"</div><br />...Looking forward to my next challenging opportunity in the areas of web, software & database engineering<div style="float: right; padding-right: 60px; font-size: 40px; color: #00ffb4;">"</div>
                             </div>
                             <div class="col col-4">
                                 <div class="container">
@@ -40,7 +40,7 @@
                                                             <div id="linkedinIcon">in</div>
                                                             break;
                                                         case "web site":
-                                                            <i class="material-icons md-18 md-darkmint" style="border: 1px solid blue;">language</i>
+                                                            <i class="material-icons md-18 md-darkmint">language</i>
                                                             break;
                                                         default:
                                                             <i class="material-icons md-18 md-darkmint">email</i>
@@ -182,7 +182,7 @@
                                                     <span class="text-Highlight">hosting services</span>
                                                     <ul>
                                                         <li>database (live): Azure SQL cloud hosting</li>
-                                                        <li>website: <a href="http://darthclark.azurewebsites.net">Microsoft Azure Cloud Service</a></li>
+                                                        <li>website: Microsoft Azure Cloud Service</li>
                                                         <li>source control: <span data-noevent="true" class="paragraph-title" style="padding: 4px;"><a href="https://github.com/rclark4077/Resume" style="color: #333;">GitHub</a></span></li>
                                                     </ul>
                                                 </li>
