--- a/Resume/Content/homeProfile.css
+++ b/Resume/Content/homeProfile.css
@@ -10,21 +10,13 @@
     width: 100vw;
     padding: 10px 10px 30px 10px;
 }
-.home-render-action table.tableRow:first-child:first-child th:first-child h1 span:first-child {
-    color: #f0ffff;
-    padding-left: 10px;
-}
-.home-render-action table.tableRow:first-child th div:nth-child(2) span {
-    padding: 20px;
+.home-render-action table.tableRow:first-child th div:nth-child(2) div {
+    padding: 0px;
+    margin: 0px;
+    letter-spacing: 1.5px;
 }
 .home-render-action table.tableRow:first-child th div:nth-child(3) div.container div div.contact i {
     line-height: 0;
-}
-.home-render-action table.tableRow:first-child th div:nth-child(3) div.container div div.contact + div {
-    text-align: left;
-    padding-top: 8px;
-}
-.home-render-action table.tableRow:first-child th div:nth-child(3) div.container div div.contact i {
     float: right;
     padding: 0;
     margin-top: 18px;
@@ -38,13 +30,16 @@
     margin: 10px 3px 0px 0px;
     padding: 0 3px 0 3px;
 }
+.home-render-action table.tableRow:first-child th div:nth-child(3) div.container div div.contact + div {
+    text-align: left;
+    padding-top: 8px;
+}
 .home-render-action table.tableRow:nth-child(2) {
     width: 100%;
 }
 .home-render-action table.tableRow:nth-child(2) tbody tr:first-child td {
     width: 100%;
-    color: black;
-    background-color: #f0ffff; 
+    color: #cbffec;
     font-size: 18px;
     text-align: center; 
 }
