--- a/Resume/Content/accomplishments.css
+++ b/Resume/Content/accomplishments.css
@@ -1,28 +1,24 @@
 ﻿#accomplishmentContainer {
-    position: absolute;
-    z-index: 100;
-    display: block;
-    top: -1000px;
+    min-width: 95%;
+    padding: 15px;
     margin: auto;
-    width: 60%;
-    color: #cbffec;
-    background-color: #444;
-    box-shadow: 0px 0px 20px 3px rgba(150,150,150, .25);
 }
-#accomplishmentContainer:hover {
-    opacity: 1;
+.modal-header,
+.modal-footer {
+    color: #f0ffff;
+    background-color: #555;
+}
+.modal-footer button {
+    color: #333;
+    background-color: #cbffec;
+}
+.modal-body {
+    margin: 0;
+    color: #f0ffff;
     background-color: #333;
-    transition: all .5s linear;
-}
-#accomplishmentContainer > header {
-    display: block;
-    text-align: center;
+    line-height: 1.75;
+    font-weight: 100;
     font-size: 18px;
-    margin: 15px 18px 5px 20px;
-    background-color: #202020;
-    border-radius: 5px;
-    height: 32px;
-    vertical-align: central;
 }
 #accomplishmentMinMax {
     float: right;
