changes to homepage verbiage and  resume alteration

--- a/Resume/Views/Shared/_ResumeLayout.cshtml
+++ b/Resume/Views/Shared/_ResumeLayout.cshtml
@@ -105,7 +105,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="accomplishmentHeader">Modal title</h5>
+                    <h5 class="modal-title" id="accomplishmentHeader"></h5>
                 </div>
                 <div id="accomplishments" class="modal-body"></div>
                 <div class="modal-footer">
