--- a/Resume/Content/homeProfile.css
+++ b/Resume/Content/homeProfile.css
@@ -6,7 +6,7 @@
     vertical-align: top;
     color: #f0ffff;
 }
-.home-render-action table.tableRow:first-child:first-child th:first-child {
+.home-render-action table.tableRow:first-child th:first-child {
     width: 100vw;
     padding: 10px 10px 30px 10px;
 }
@@ -14,6 +14,9 @@
     padding: 0px;
     margin: 0px;
     letter-spacing: 1.5px;
+}
+.home-render-action table.tableRow:first-child th div:nth-child(3) div.container {
+    border-right: 10px dotted #00ffb4;
 }
 .home-render-action table.tableRow:first-child th div:nth-child(3) div.container div div.contact i {
     line-height: 0;
@@ -59,7 +62,7 @@
     padding-left: 5px;
 }
 .home-render-action table.tableRow:nth-child(3) tbody tr td div li ul > li {
-    list-style: square;
+    list-style: none;
     list-style-position: inside;
     padding-left: 25px;
 }
