Cleanuped up all defautl param values for Interfaces and Service Repositories left over from a former stash

--- a/Resume/Views/Shared/_ResumeLayout.cshtml
+++ b/Resume/Views/Shared/_ResumeLayout.cshtml
@@ -100,7 +100,7 @@
     <div id="tooltip" role="tooltip" style="display: none;"></div>
 
     @*bootstrap modal dialog*@
-    <button id="myModalTrigger" type="button" data-toggle="modal" data-target="#accomplishmentContainer">Launch modal</button>
+    <button id="myModalTrigger" type="button" data-toggle="modal" data-target="#accomplishmentContainer"></button>
     <div id="accomplishmentContainer" class="modal fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -114,7 +114,6 @@
             </div>
         </div>
     </div>
-
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
