--- a/Resume/Content/homeProfile.css
+++ b/Resume/Content/homeProfile.css
@@ -2,66 +2,42 @@
     height: 100%;
     background-color: #343A40;
 }
-.home-render-action table.tableRow:first-child th {
-    vertical-align: top;
-    color: #f0ffff;
-}
 .home-render-action table.tableRow:first-child th:first-child {
     width: 100vw;
-    padding: 10px 10px 30px 10px;
+    padding: 0 0 25px 0;
+    margin: 0;
 }
-.home-render-action table.tableRow:first-child th div:nth-child(2) div {
-    padding: 0px;
-    margin: 0px;
-    letter-spacing: 1.5px;
-}
-.home-render-action table.tableRow:first-child th div:nth-child(3) div.container {
-    border-right: 10px dotted #00ffb4;
-}
-.home-render-action table.tableRow:first-child th div:nth-child(3) div.container div div.contact i {
-    line-height: 0;
-    float: right;
-    padding: 0;
-    margin-top: 18px;
-}
-.home-render-action table.tableRow:first-child th div:nth-child(3) div.container div div.contact div#linkedinIcon {
-    float: right;
-    font-size: 10px;
-    border-radius: 1px;
-    color: #101010;
-    background-color: #00ffb4;
-    margin: 10px 3px 0px 0px;
-    padding: 0 3px 0 3px;
-}
-.home-render-action table.tableRow:first-child th div:nth-child(3) div.container div div.contact + div {
-    text-align: left;
-    padding-top: 8px;
-}
-.home-render-action table.tableRow:nth-child(2) {
+.home-render-action table.tableRow:nth-child(1) {
     width: 100%;
 }
-.home-render-action table.tableRow:nth-child(2) tbody tr:first-child td {
+.home-render-action table.tableRow:nth-child(1) tbody tr:first-child td {
     width: 100%;
-    color: #cbffec;
-    font-size: 18px;
+    color: #fff;
+    font-family: Raleway-Thin;
+    font-size: 35px;
     text-align: center; 
 }
-.home-render-action table.tableRow:nth-child(2) tbody tr:first-child td span {
+.home-render-action table.tableRow:nth-child(1) tbody tr:first-child td span {
     text-align: center;
 }
-.home-render-action table.tableRow:nth-child(3) tbody tr td {
-    color: #f0ffff;
-    padding: 25px;
+.home-render-action table.tableRow:nth-child(2) td {
+    width: 50%;
+    vertical-align: top;
+    padding: 20px;
 }
-.home-render-action table.tableRow:nth-child(3) tbody tr td div:last-child {
+.home-render-action table.tableRow:nth-child(3) td {
+    vertical-align: top;
+    padding: 20px;
+}
+.home-render-action table.tableRow:nth-child(3) td div:last-child {
     margin-top: 15px;
     margin-bottom: 15px;
 }
-.home-render-action table.tableRow:nth-child(3) tbody tr td div li {
+.home-render-action table.tableRow:nth-child(3) td div li {
     list-style: none;
     padding-left: 5px;
 }
-.home-render-action table.tableRow:nth-child(3) tbody tr td div li ul > li {
+.home-render-action table.tableRow:nth-child(3) td div li ul > li {
     list-style: none;
     list-style-position: inside;
     padding-left: 25px;
