--- a/Resume/Content/homeProfile.css
+++ b/Resume/Content/homeProfile.css
@@ -29,16 +29,20 @@
     vertical-align: top;
     padding: 20px;
 }
-.home-render-action table.tableRow:nth-child(3) td div:last-child {
-    margin-top: 15px;
-    margin-bottom: 15px;
+.home-render-action table.tableRow:nth-child(3) td table {
+    width: 100%;
+    background-color: #4a5257;
 }
-.home-render-action table.tableRow:nth-child(3) td div li {
-    list-style: none;
-    padding-left: 5px;
+.home-render-action table.tableRow:nth-child(3) td table thead {
+    height: 65px;
 }
-.home-render-action table.tableRow:nth-child(3) td div li ul > li {
-    list-style: none;
-    list-style-position: inside;
-    padding-left: 25px;
+.home-render-action table.tableRow:nth-child(3) td table td,
+.home-render-action table.tableRow:nth-child(3) td table th {
+    width: 50%;
+    text-align: left;
+    padding: 0;
+    margin: 0;
+}
+.display-table {
+    display: none;
 }
