--- a/Resume/Views/Shared/_HeaderProfile.cshtml
+++ b/Resume/Views/Shared/_HeaderProfile.cshtml
@@ -148,7 +148,7 @@
                                     <td>data access</td>
                                     <td>
                                         <div>entity framework6 - ado.net entity data model(s)</div>
-                                        <div>linq</div>
+                                        <div>linq queries</div>
                                         <div>mssql 2014</div>
                                     </td>
                                 </tr>
