--- a/Resume/Content/homeProfile.css
+++ b/Resume/Content/homeProfile.css
@@ -40,7 +40,7 @@
 .home-render-action table.tableRow:nth-child(3) td table th {
     width: 50%;
     text-align: left;
-    padding: 0;
+    padding: 10px;
     margin: 0;
 }
 .display-table {
